--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -1,14 +1,21 @@
 <div class="cart-item-wrapper" *ngIf="cartItem" >
-    <img class="cart-item-picture" [src]="cartItem.picture"  alt="picture">
     <div class="cart-item-content" >
-        <h3> {{cartItem.name}}  </h3>
-        <p> <b>PU : </b> {{cartItem.price | currency }}  </p>
-        <div>
-            <button (click)="decrement(cartItem)" >-</button>
-            <span> {{cartItem.quantity }} </span>
-            <button (click)="increment(cartItem)" >+</button>
+        <img class="cart-item-picture" [src]="cartItem.picture"  alt="picture">
+        <div class="cart-item-infos" >
+            <h3> {{cartItem.name}}  </h3>
+            <p> <b>PU : </b> {{cartItem.price | currency }}  </p>
+            <div>
+                <button (click)="decrement.emit()" >-</button>
+                <span> {{cartItem.quantity }} </span>
+                <button (click)="increment.emit()" >+</button>
+            </div>
+            <p> {{cartItem.price * cartItem.quantity | currency }} </p>
         </div>
-        <p> {{cartItem.price * cartItem.quantity | currency }} </p>
+    </div>
+   
+
+    <div >
+        <button class="remove-product-in-cart-button" (click)="removeProductFromCart.emit()"  >Retirer</button>
     </div>
    
 </div>
