--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,19 +2,19 @@
     <div>
         Logo
     </div>
-    <div class="content" >
-        <div class="li-container" >
-            <li>
-                <a routerLink="" >Accueil</a>
-            </li>
-            <li>
-                <a routerLink="/shop" >Boutiques</a>
-            </li>
-        </div>
-        <div class="cart-container" >
-            <a  routerLink="/cart" >
-                Panier <span  > {{cart.length}} </span>
-            </a>
-        </div>
+    <div class="li-container" >
+        <li>
+            <a routerLink="" >Accueil</a>
+        </li>
+        <li>
+            <a routerLink="/shop" >Boutique</a>
+        </li>
     </div>
+    <div class="cart-container"  >
+        <a  routerLink="/cart" >
+            <!-- Panier <span  > {{cart.length}} </span> -->
+            Voir Panier
+        </a>
+    </div>
+    
 </div>
