--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,7 +1,10 @@
-<div *ngIf="product" >
+<div class="product-details-wrapper" *ngIf="product" >
     <img class="product-details-picture" [src]="product.picture" alt="picture">
-    <h3>  {{product.name}} </h3>
-    <p> Prix  : {{product.price | currency}} </p>
-    <p> catégorie : {{product.category}} </p>
-    <p> <b>Description  :</b> {{product.description}} </p>
+    <div class="content" >
+        <h3>  {{product.name}} </h3>
+        <p> Prix  : {{product.price | currency}} </p>
+        <p> catégorie : {{product.category}} </p>
+        <p> <b>Description  :</b> {{product.description}} </p>
+        <button class="add-button" (click)="addProductToCart(product)" >Ajouter au panier</button>
+    </div>
 </div>
