--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -27,3 +27,15 @@
     width: 100%;
     justify-content: flex-end;
 }
+
+.empty-cart{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p{
+        font-size: 20px;
+        color: gray;
+    }
+}
